# dz_13.1

./: class_category.py  class_product.py  classes.py  main.py  mixin.py  pyproject.toml
tests/: test_classes.py
