[tool.poetry]
name = "dz-13-1"
version = "0.1.0"
description = ""
authors = ["Aleksey-Markov <tte4enuxa@gmail.com>"]
readme = "README.md"
packages = [{include = "dz_13"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
